examples/test/testpolicy3744.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3744
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key29: value43
      key24: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value41
          key26: value25
          key29: value21
      podSelector:
        matchLabels:
          key1: value0
          key14: value21
